# Exponential-integrators-for-diffusion-equation

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: diagram.md
etd_simple_experiments/scripts/: backward_euler.py  etd1.py  etdrk2.py
etd_simple_experiments/src/: etd_methods.py  manufactured.py  matrices.py  phi.py
scripts/: compare_etd1_etdrk2.py  compare_etd_be.py  compare_etd_fourier.py  fem_1d_diffusion.py  fem_2d_diffusion.py  fem_etd_compare.py  ibvp_etd.py  ibvp_etd_f.py  ibvp_fourier_etd.py  run_backward_euler.py  run_etd1.py  run_etdrk2.py  time_comp.py
src/etd/: manufactured.py
src/fem/: fem1d_assembly.py  fem2d_assembly.py  fem_assembly.py  mesh.py  mesh_1d.py  mesh_2d.py
src/fem_edt/: be.py  etdrk2.py  manufactured.py  matrices.py
src/time_diff/: be.py  etd1.py  etdrk2.py  krylov_method.py  manufactured.py  matrices.py  phi.py
tests/: test.py
